clean up package maven terminal loadout