@@ -105,6 +105,9 @@
         --add-opens java.base/java.lang=ALL-UNNAMED
         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
         -Dnet.bytebuddy.experimental=true
+        -Xshare:off
+        -XX:+EnableDynamicAgentLoading
+        --sun-misc-unsafe-memory-access=allow
       </argLine>
     </configuration>
     </plugin>
@@ -144,6 +147,7 @@
             <artifact>*:*</artifact>
             <excludes>
               <exclude>module-info.class</exclude>
+              <exclude>META-INF/MANIFEST.MF</exclude>
               <exclude>META-INF/*.SF</exclude>
               <exclude>META-INF/*.DSA</exclude>
               <exclude>META-INF/*.RSA</exclude>
@@ -160,6 +164,7 @@
           </filter>
         </filters>
         <transformers>
+        
           <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
           <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
               <mainClass>Main</mainClass>
